--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,16 +1,37 @@
-# go to sleep after one hour (1*60*60*1000ms)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
-
-# Turn on logging, and set ZMK logging to debug output
-# CONFIG_ZMK_USB_LOGGING=n
-#
 # Copyright (c) 2022 Darryl deHaan
 # SPDX-License-Identifier: MIT
-#
-# Enable 32kHz crystal
+
+#Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+#explicitly disable sleep
+CONFIG_ZMK_SLEEP=n
+
+#go to sleep after one hour (1*60*60*1000ms)
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+#boost BT signal
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+#enable NKRO
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+
+#enable boot time keyboard usage
+CONFIG_ZMK_USB_BOOT=y
+
+#enable Mouse keys
+CONFIG_ZMK_MOUSE=y
+
+#Turn on logging, and set ZMK logging to debug output
+# CONFIG_ZMK_USB_LOGGING=n
+# CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+#Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 
+#RGB settings
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
@@ -22,8 +43,11 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
-
-#CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+#backlight settings
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_BRT_START=100
+CONFIG_ZMK_BACKLIGHT_ON_START=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
 
 #EC11 enable
 CONFIG_EC11=y
@@ -31,18 +55,3 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
-
-# MOUSE
-CONFIG_ZMK_MOUSE=y
-
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
-
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=100
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
-
-
-
-
