--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,6 +1,9 @@
 # Copyright (c) 2022 Darryl deHaan
 # SPDX-License-Identifier: MIT
 
+#keyboard name
+CONFIG_ZMK_KEYBOARD_NAME="SOFLE_O"
+
 #Enable eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
