--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -6,8 +6,8 @@
     combos {
         compatible = "zmk,combos";
 
-        combo_qwerty {
-            bindings = <&to 0>;
+        combo_game {
+            bindings = <&to 6>;
             key-positions = <0 39>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
