--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -53,6 +53,7 @@
             key-positions = <15 16>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
+            slow-release;
         };
 
         combo_delete {
@@ -60,6 +61,7 @@
             key-positions = <28 29>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
+            slow-release;
         };
 
         combo_enter {
@@ -67,6 +69,7 @@
             key-positions = <29 30>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
+            slow-release;
         };
 
         combo_at_sign {
@@ -116,6 +119,7 @@
             key-positions = <27 28>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
+            slow-release;
         };
 
         combo_caret {
@@ -221,6 +225,7 @@
             key-positions = <14 15>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
+            slow-release;
         };
 
         combo_scrolllock {
