--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -53,7 +53,7 @@
             key-positions = <15 16>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            slow-release = true;
+            slow-release = <true>;
         };
 
         combo_delete {
@@ -61,7 +61,7 @@
             key-positions = <28 29>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            slow-release = true;
+            slow-release = <true>;
         };
 
         combo_enter {
@@ -69,7 +69,7 @@
             key-positions = <29 30>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            slow-release = true;
+            slow-release = <true>;
         };
 
         combo_at_sign {
@@ -119,7 +119,7 @@
             key-positions = <27 28>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            slow-release = true;
+            slow-release = <true>;
         };
 
         combo_caret {
@@ -225,7 +225,7 @@
             key-positions = <14 15>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            slow-release = true;
+            slow-release = <true>;
         };
 
         combo_scrolllock {
