--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -60,7 +60,7 @@
             key-positions = <28 29>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            layers = <0, 2, 3, 4, 5, 6>;
+            layers = <0 2 3 4 5 6>;
         };
 
         combo_enter {
@@ -117,7 +117,7 @@
             key-positions = <27 28>;
             timeout-ms = <COMBO_DEFAULT_TIMEOUT_MS>;
             require-prior-idle-ms = <COMBO_PRIOR_IDLE_MS>;
-            layers = <0, 2, 3, 4, 5, 6>;
+            layers = <0 2 3 4 5 6>;
         };
 
         combo_caret {
