--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 
 #keyboard name
-CONFIG_ZMK_KEYBOARD_NAME="SOFLE_O"
+CONFIG_ZMK_KEYBOARD_NAME="SOFLE"
 
 #Enable eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
