--- a/config/west.yml
+++ b/config/west.yml
@@ -2,15 +2,20 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: gpeye
-      url-base: https://github.com/GPeye
+    # - name: gpeye
+    #   url-base: https://github.com/GPeye
+    - name: m165437
+      url-base: https://github.com/M165437
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: hammerbeam-slideshow
-      remote: gpeye
+    # - name: hammerbeam-slideshow
+    #   remote: gpeye
+    #   revision: main
+    - name: nice-view-gem
+      remote: m165437
       revision: main
   self:
     path: config
