--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -26,6 +26,10 @@ CONFIG_ZMK_USB_BOOT=y
 #enable Mouse keys
 CONFIG_ZMK_MOUSE=y
 
+# custom GEM screen
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
 #Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=n
 # CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
