--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -29,6 +29,7 @@ CONFIG_ZMK_MOUSE=y
 # custom GEM screen
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=3840
 
 #Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=n
