--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -11,7 +11,9 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 #explicitly disable sleep
 CONFIG_ZMK_SLEEP=n
 
-#go to sleep after one hour (1*60*60*1000ms)
+#30 minutes (1*30*60*1000ms)
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+#1 hour (1*60*60*1000ms)
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 #boost BT signal
