--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -9,12 +9,15 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 #explicitly disable sleep
-CONFIG_ZMK_SLEEP=n
+#CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_SLEEP=y
 
 #30 minutes (1*30*60*1000ms)
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 #1 hour (1*60*60*1000ms)
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+#2 hour (1*120*60*1000ms)
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
 
 #boost BT signal
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -28,10 +31,12 @@ CONFIG_ZMK_USB_BOOT=y
 #enable Mouse keys
 CONFIG_ZMK_MOUSE=y
 
-# custom GEM screen
+#custom GEM screen
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-CONFIG_NICE_VIEW_GEM_ANIMATION_MS=3840
+#default 960 => 60fps
+#CONFIG_NICE_VIEW_GEM_ANIMATION_MS=960
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=15360
 
 #Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=n
