--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -4,32 +4,30 @@
 #keyboard name
 CONFIG_ZMK_KEYBOARD_NAME="SOFLE"
 
-#Enable eager debouncing
+#basic config
+CONFIG_EC11=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_USB_BOOT=y
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+#eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
-#explicitly disable sleep
-#CONFIG_ZMK_SLEEP=n
+#sleep config
 CONFIG_ZMK_SLEEP=y
-
 #30 minutes (1*30*60*1000ms)
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 #1 hour (1*60*60*1000ms)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 #2 hour (1*120*60*1000ms)
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
 
-#boost BT signal
+#BT config
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-#enable NKRO
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
-
-#enable boot time keyboard usage
-CONFIG_ZMK_USB_BOOT=y
-
-#enable Mouse keys
-CONFIG_ZMK_MOUSE=y
 
 #custom GEM screen
 CONFIG_ZMK_DISPLAY=y
@@ -38,10 +36,6 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 #CONFIG_NICE_VIEW_GEM_ANIMATION_MS=960
 CONFIG_NICE_VIEW_GEM_ANIMATION_MS=15360
 
-#Turn on logging, and set ZMK logging to debug output
-# CONFIG_ZMK_USB_LOGGING=n
-# CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
-
 #Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
@@ -49,24 +43,16 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 #RGB settings
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=90
-
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
 #backlight settings
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_BACKLIGHT_ON_START=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
-
-#EC11 enable
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-#EXT POWER
-CONFIG_ZMK_EXT_POWER=y
