--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -18,13 +18,13 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 #sleep config
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
 #30 minutes (1*30*60*1000ms)
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 #1 hour (1*60*60*1000ms)
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 #2 hour (1*120*60*1000ms)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
 
 #BT config
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
